--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,11 @@
+server:
+  port: 8080
 
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/wallet?characterEncoding=UTF-8&serverTimezone=GMT&useSSL=false
+    username: root
+    password:
+  jpa:
+    show-sql: true
+    database: mysql
